# pymandua

./: .gitignore  README.md  estrutura.txt  pyproject.toml  requirements.txt  setup.py
fox/: __main__.py  aggregator.py  cleaner.py  crawler.py  gatherer.py  treater.py
midia/: Cleaner-Treater Interaction.mmd  Converter.mmd  cleaner.mmd  collect.mmd  collect_flowchart.mmd  crawler_class_simplified.mmd  driver_class_chart_simplified.mmd  gatherer_class_chart_simplified.mmd  interface_flowchart.mmd  interface_flowchart_simplificado.mmd  treater.mmd
pymandua/: __init__.py  app.py  config.yaml  converter.py  driver.py  ingest.py  interface.py  provider_loader.py  query.py
tests/: test.py
