[project]
name = "html2mkd"
version = "0.1.0"
description = "Biblioteca para converter HTML de páginas em Markdown com ajuda de LLMs."
authors = [{ name = "Seu Nome" }]
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "selenium",
    "rapidfuzz"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
